--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">IntentApp</string>
+    <string name="client_id">106512132177-588qh13o7sajne69l9m774b69cno2hoh.apps.googleusercontent.com</string>
 </resources>
